Reword a few things

--- a/public/index.html
+++ b/public/index.html
@@ -557,16 +557,18 @@ section {
             <a href="https://comsystoreply.de">https://comsystoreply.de</a>
           </div>
           <div class="summary">
-            <p>I worked on diverse projects across various industries, collaborating with stakeholders to gather requirements, refine them into actionable user stories, and implement features following industry best practices. My role emphasized maintaining system integrity, fostering knowledge exchange across teams, and breaking down complex challenges through events like event storming. I contributed to multiple projects ranging from modernizing legacy systems to building microservices for Automotive giants within the logistics domain. Leveraging technologies such as Kotlin, Spring Boot, and AWS, I ensured solutions were scalable, reliable, and adhered to clean code principles.</p>
+            <p>I worked on diverse projects across various industries, collaborating with stakeholders to gather requirements, refine them into actionable user stories, and implement features following industry best practices. My role emphasized maintaining system integrity, fostering knowledge exchange across teams, and breaking down complex topics through events like event storming. I contributed to multiple projects ranging from modernizing legacy systems for banks, creating state of the art logistic solutions for Automotive giants and working on realtime Car Auction platforms, to name a few. Leveraging technologies such as Kotlin, Spring Boot, and AWS, I ensured solutions were scalable, reliable, and adhered to clean code principles.</p>
           </div>
           <ul class="highlights">
-            <li>Designed and implemented features in Kotlin and Java for microservices architectures in logistics and IoT.</li>
-            <li>Gathered requirements from stakeholders and translated them into actionable user stories.</li>
-            <li>Engaged in cross-team knowledge sharing and participated in event storming sessions.</li>
-            <li>Maintained legacy systems hosted on IBM WebSphere and contributed to modernization efforts.</li>
-            <li>Implemented solutions for CI/CD pipelines, leveraging Kubernetes, HELM, and containerized environments.</li>
-            <li>Optimized service communication in distributed environments hosted on AWS and Azure.</li>
-            <li>Streamlined development processes, ensuring clean code, TDD, and seamless integration.</li>
+            <li>Supported backend development with a focus on networking and containerized environments</li>
+            <li>Focused on streamlining development and ensuring system stability.</li>
+            <li>Addressed challenges in maintaining clean code, applying TDD, and ensuring seamless integration and delivery.</li>
+            <li>Ensured scalability and maintainability while following best practices in feature implementation.</li>
+            <li>Maintained architectural integrity and optimized service communication within Azure and AWS-hosted environments.</li>
+            <li>Overcame legacy system constraints in Java-based applications hosted on IBM WebSphere</li>
+            <li>Addressed integration challenges in a structured monolith environment with external service communication</li>
+            <li>Solved complexities in a microservice architecture using standards for EDI communication.</li>
+            <li>Tackled IoT-specific challenges, including device connectivity</li>
           </ul>
         </div>
         <div class="item">
@@ -591,9 +593,9 @@ section {
             <p>I contributed to the development and maintenance of financial and banking applications, focusing on SEPA compliance and transaction processing. My responsibilities included creating SQL procedures, developing front-end and back-end modules, implementing REST APIs, and ensuring data integrity through robust validation processes. I collaborated with senior developers to deliver new features and provided ongoing customer support to ensure seamless application functionality.</p>
           </div>
           <ul class="highlights">
-            <li>Implemented REST APIs and front-end interfaces for financial systems.</li>
-            <li>Addressed challenges in XML transaction packaging and input validation.</li>
-            <li>Ensured seamless user functionality in banking systems.</li>
+            <li>Developed and maintained modules for financial transaction processing, including REST APIs and front-end interfaces</li>
+            <li>Implemented SQL procedures, data migrations, and persistence jobs to comply with SEPA regulations.</li>
+            <li>Addressed challenges in XML transaction packaging, input validation, and ensuring seamless user functionality in banking systems</li>
           </ul>
         </div>
       </div>
@@ -955,6 +957,7 @@ section {
             <li>Integration Testing</li>
             <li>Performance Testing</li>
             <li>Domain-Driven Design</li>
+            <li>Trunk based development</li>
           </ul>
         </div>
         <div class="item">
