Add trunk based development to skills

--- a/index.html
+++ b/index.html
@@ -957,6 +957,7 @@ section {
             <li>Integration Testing</li>
             <li>Performance Testing</li>
             <li>Domain-Driven Design</li>
+            <li>Trunk based development</li>
           </ul>
         </div>
         <div class="item">
