--- a/public/index.html
+++ b/public/index.html
@@ -574,10 +574,10 @@ section {
         <div class="item">
           <div class="date">
             <span class="startDate">
-              May 2017.
+              November 2015.
             </span>
             <span class="endDate">
-              - Present.
+              - May 2017
             </span>
           </div>
           <h3 class="name">
@@ -653,6 +653,26 @@ section {
       <div class="right">
         <div class="item">
           <h3 class="publisher">
+            jimp
+          </h3>
+          <h4 class="name">
+            Bank
+          </h4>
+          <h4>Summary</h4>
+          <div class="summary">
+            <p>Developing multiple services related to car-insurance. ,Microservice architecture with Java and Spring in the backend and React in the frontend.,Openshift is used to manage the workloads, whilst Jenkins is used as the pipeline for the services ,Key responsibilities are:,- enhance system security and scalability,- maintaining existing functionality, whilst trying to improve current codebase.,- developing features for missing products,- ownership of tasks from development to production</p>
+          </div>
+          <h4>Roles</h4>
+          <p class="summary">
+            Senior Developer
+          </p>
+          <h4>Stack</h4>
+          <p class="stack">
+            Java,Spring,Microservices,Openshift,React,Jenkins
+          </p>
+        </div>
+        <div class="item">
+          <h3 class="publisher">
             Comsysto @Audi Used Car Platform
           </h3>
           <h4 class="name">
@@ -663,7 +683,7 @@ section {
           </div>
           <h4>Summary</h4>
           <div class="summary">
-            <p>Developed a platform enabling Audi to auction used cars to dealers., The application follows a structured monolith setup with components written in Kotlin and Java,, and integrates with two external services.</p>
+            <p>Developed a platform enabling Audi to auction used cars to dealers., The application follows a structured monolith setup with components written in Kotlin and Java,, and integrates with two external services.,Key responsibilities are:,[object Object],- encapsulate business logic within the domain of the application,- decouple application,- generify commonly repeated tasks,- work with the stakeholders to better define the scopes and the goal ,- oversea a group of junior colleagues,- developing features for missing products,- release management</p>
           </div>
           <h4>Roles</h4>
           <p class="summary">
@@ -671,7 +691,7 @@ section {
           </p>
           <h4>Stack</h4>
           <p class="stack">
-            Kotlin,Java,Monolith Architecture,AWS,Domain-Driven Design
+            Kotlin,Java,Monolith Architecture,AWS,Domain-Driven Design,React
           </p>
         </div>
         <div class="item">
@@ -686,15 +706,15 @@ section {
           </div>
           <h4>Summary</h4>
           <div class="summary">
-            <p>Built and maintained a microservice-based EDI solution for logistics communication between VW, suppliers, and shippers., Each service adhered to hexagonal architecture and was implemented in Kotlin, hosted on AWS with logical account separation.</p>
+            <p>Built and maintained a microservice-based EDI solution for logistics communication between VW, suppliers, and shippers.,Each service adhered to hexagonal architecture and was implemented in Kotlin, hosted on AWS with logical account separation.,Key responsibilities are:,- Develop solutions for highly complex business cases,- Work across multiple teams to disperse knowledge,- Automate processes,- Hold presentations about decisions taken and lessons learned,- Work closely with stakeholders and other teams to create a Ubiquitous Language,- Partake in Event Storming meetings</p>
           </div>
           <h4>Roles</h4>
           <p class="summary">
-            Senior Backend Developer
+            Senior Developer
           </p>
           <h4>Stack</h4>
           <p class="stack">
-            Kotlin,AWS,Hexagonal Architecture,ArchUnit,Microservices
+            Kotlin,AWS,Hexagonal Architecture,ArchUnit,Microservices,React,Trunk based development,Pair programming
           </p>
         </div>
         <div class="item">
@@ -709,7 +729,7 @@ section {
           </div>
           <h4>Summary</h4>
           <div class="summary">
-            <p>Managing and maintaining three services on IBM Web Sphere., Responsibilities included client communication, gathering requirements, developing features, and ensuring application maintenance.</p>
+            <p>Managing and maintaining three services on IBM Web Sphere., Responsibilities included client communication, gathering requirements, developing features, and ensuring application maintenance.,Key responsibilities are:,- directly available to users for troubleshooting problems,- directly responsible for 4 core services of the bank,- mentor junior colleague</p>
           </div>
           <h4>Roles</h4>
           <p class="summary">
@@ -717,7 +737,7 @@ section {
           </p>
           <h4>Stack</h4>
           <p class="stack">
-            Java,IBM Web Sphere,Client Communication,Feature Development
+            Java,IBM Web Sphere,Client Communication,Feature Development,Pair programming
           </p>
         </div>
         <div class="item">
@@ -732,7 +752,7 @@ section {
           </div>
           <h4>Summary</h4>
           <div class="summary">
-            <p>Developed backend features for an IoT application enabling technicians to access and manage industrial heating devices., Split monolith into microservices, implemented networking solutions with OpenVPN, containerized the services and moved some of them to Azure.</p>
+            <p>Developed backend features for an IoT application enabling technicians to access and manage industrial heating devices., Split monolith into microservices, implemented networking solutions with OpenVPN, containerized the services and moved some of them to Azure.,Key responsibilities are:,- take over application from creator,- meet QA expectations to make application production ready,- develop new features,- directly responsible to users</p>
           </div>
           <h4>Roles</h4>
           <p class="summary">
@@ -740,7 +760,7 @@ section {
           </p>
           <h4>Stack</h4>
           <p class="stack">
-            Jetty,Spring Boot,Node.js,OpenVPN,Azure,Microservices
+            Jetty,Spring Boot,Node.js,OpenVPN,Azure,Microservices,Pair Programming
           </p>
         </div>
         <div class="item">
@@ -755,7 +775,7 @@ section {
           </div>
           <h4>Summary</h4>
           <div class="summary">
-            <p>Modernized an existing web platform using Angular and Spring Boot 2.x.,Focused on backend development, microservices, and CI/CD pipelines while supporting releases and maintenance.</p>
+            <p>Modernized an existing web platform using Angular and Spring Boot 2.x.,Focused on backend development, microservices, and CI/CD pipelines while supporting releases and maintenance.,Key responsibilities are:,- Implement service security,- Implement new features for products,- Support,- Closely work with QA to set testing benchmarks</p>
           </div>
           <h4>Roles</h4>
           <p class="summary">
@@ -778,7 +798,7 @@ section {
           </div>
           <h4>Summary</h4>
           <div class="summary">
-            <p>Reconfigured Spring implementation and refactored code to make a single-page application production-ready for BMW.,Introduced JPA, transactional calls, and wrote batch jobs.</p>
+            <p>Reconfigured Spring implementation and refactored code to make a single-page application production-ready for BMW.,Introduced JPA, transactional calls, and wrote batch jobs.,Key responsibilities are:,- Help team get application production ready,- Designed and implemented transaction management using Spring to ensure ACID principles across critical operations </p>
           </div>
           <h4>Roles</h4>
           <p class="summary">
@@ -786,7 +806,7 @@ section {
           </p>
           <h4>Stack</h4>
           <p class="stack">
-            Java,Spring Boot,JPA,Testing,Code Refactoring
+            Java,Spring Boot,JPA,Bash,Vaadin,Testing,Code Refactoring
           </p>
         </div>
         <div class="item">
