--- a/public/index.html
+++ b/public/index.html
@@ -492,9 +492,9 @@ section {
     
           <div class="contact">
             <ul class="inline comma" id="location">
-              <li class="postalCode">1080</li>
-              <li class="city">Vienna</li>
-              <li class="countryCode">AT</li>
+              <li class="postalCode">51557</li>
+              <li class="city">Cres</li>
+              <li class="countryCode">CRO</li>
             </ul>
           </div>
     
